[package]
name = "pobbin-assets"
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
edition = "2021"
license = "GPL-3.0-or-later"

[features]
default = ["web"]
web = ["ureq"]

[dependencies]
libooz-sys = { path = "./libooz-sys/" }
anyhow = "1"
byteorder = "1.4"
nom = "7.1"
thiserror = "1"
sha2 = "0.10"
bpaf = { version = "0.7", features = ["derive"] }
magick_rust = "0.17"
dashmap = "5"
tempfile = "3"

tracing = "0.1"
tracing-subscriber = "0.3"

ureq = { version = "2", optional = true }


[workspace]
members = [
    "libooz-sys"
]
