[package]
name = "pobbin-assets"
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
edition = "2021"
license = "GPL-3.0-or-later"

[features]
default = ["web", "pipeline", "data"]
web = ["dep:ureq"]
pipeline = ["dep:magick_rust"]
data = ["dep:url", "dep:serde", "dep:serde_json", "dep:serde_with", "dep:itertools"]

[dependencies]
libooz-sys = { path = "./libooz-sys/" }
anyhow = "1"
byteorder = "1.4"
nom = "7.1"
thiserror = "1"
sha2 = "0.10"
bpaf = { version = "0.7", features = ["derive"] }
dashmap = "5"
tempfile = "3"
murmur2 = "0.1"

tracing = "0.1"
tracing-subscriber = "0.3"

ureq = { version = "2", optional = true }
magick_rust = { version = "0.17", optional = true }
url = { version = "2", optional = true }
serde = { version = "1.0.188", features = ["derive"], optional = true }
serde_json = { version = "1.0.107", optional = true }
serde_with = { version = "3", optional = true }
itertools = { version = "0.11", optional = true }


[workspace]
members = [
    "libooz-sys"
]
